Steal shamelessly from Ray Chen for C3779 (#3584)

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -2932,6 +2932,8 @@
           href: compiler-errors-2/compiler-error-c3771.md
         - name: Compiler error C3772
           href: compiler-errors-2/compiler-error-c3772.md
+        - name: Compiler error C3779
+          href: compiler-errors-2/compiler-error-c3779.md
         - name: Compiler error C3797
           href: compiler-errors-2/compiler-error-c3797.md
         - name: Compiler error C3798
