first draft: year_month_day_last (#3627)
* first draft: year_month_day_last

* fixes

* fix link

* new class: year-month-weekday

* fix link, add index member

* add local_days, sys_days

* acrolinx

* added year_month_weekday_last class

* update description

* fix typos

* update code snippets and add examples for / operator

* fix code snippets

Co-authored-by: TylerMSFT <Tyler.Whitney@microsoft.com>

--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -194,6 +194,12 @@
           href: year-month-class.md
         - name: year_month_day class
           href: year-month-day-class.md
+        - name: year_month_day_last class
+          href: year-month-day-last-class.md
+        - name: year_month_weekday class
+          href: year-month-weekday-class.md
+        - name: year_month_weekday_last class
+          href: year-month-weekday-last-class.md
     - name: <cinttypes>
       href: ../standard-library/cinttypes.md
     - name: <ciso646>
