Add 16.11 Compiler Warnings C5247 and C5248 (#3689)
* Add C5247 and C5248

* Fix link typos

* Updates per Xiang Fan review

* More wordsmithage

* More fix per X.F.

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -4296,6 +4296,10 @@
           href: compiler-warnings/c5105.md
         - name: Compiler warning (level 1) C5208
           href: compiler-warnings/c5208.md
+        - name: Compiler warning (level 1) C5247
+          href: compiler-warnings/c5247.md
+        - name: Compiler warning (level 1) C5248
+          href: compiler-warnings/c5248.md
 - name: Compiler warnings by compiler version
   href: compiler-warnings/compiler-warnings-by-compiler-version.md
 - name: Compiler warnings that are off by default
