--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -156,6 +156,8 @@
           href: duration-class.md
         - name: duration_values struct
           href: duration-values-structure.md
+        - name: file_clock class
+          href: file-clock-class.md
         - name: hh_mm_ss class
           href: hhmmss-class.md
         - name: high_resolution_clock struct 
