--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -158,6 +158,8 @@
           href: duration-values-structure.md
         - name: file_clock class
           href: file-clock-class.md
+        - name: last_spec
+          href: last-spec-struct.md
         - name: local_t
           href: local_t.md
         - name: gps_clock class
@@ -192,6 +194,8 @@
           href: time-point-class.md
         - name: time_zone class
           href: time-zone-class.md
+        - name: time_zone_link class
+          href: time-zone-link-class.md
         - name: treat_as_floating_point struct
           href: treat-as-floating-point-structure.md
         - name: utc_clock class
