--- a/docs/code-quality/index.yml
+++ b/docs/code-quality/index.yml
@@ -8,6 +8,7 @@ metadata:
   description: Learn how Visual Studio can help you analyze C and C++ code quality.
   ms.topic: landing-page
   ms.date: 05/26/2020
+  ms.custom: intro-landing-hub
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | video | whats-new
 
