--- a/docs/cpp/index.yml
+++ b/docs/cpp/index.yml
@@ -7,6 +7,7 @@ metadata:
   description: C++ programming reference for users of Microsoft C++ and Visual Studio.
   ms.topic: landing-page
   ms.date: 05/08/2020
+  ms.custom: intro-landing-hub
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | video | whats-new
 
