--- a/docs/index.yml
+++ b/docs/index.yml
@@ -11,6 +11,7 @@ metadata:
   author: corob-msft
   ms.author: corob
   ms.date: 06/04/2020
+  ms.custom: intro-landing-hub
 
 # highlightedContent section (optional)
 # Maximum of 8 items
