Add documentation for IntelliSense linter for C++ (#3821)
* Add first draft of linter check documentation

* WIP overview.

Signed-off-by: Kyle Reed <kylereed@microsoft.com>

* Update toc. First draft of the linter overview.

* Add screenshots, move files, code samples are stand-alone.

Signed-off-by: Kyle Reed <kylereed@microsoft.com>

* Style and Acrolinx grammar checker pass

* Add missing Options cues for checks

* Update to use latest option names

Co-authored-by: 3836425+corob-msft@users.noreply.github.com <corob@microsoft.com>

--- a/docs/ide/toc.yml
+++ b/docs/ide/toc.yml
@@ -11,6 +11,24 @@
       href: ../ide/how-to-set-preferences.md
     - name: Collaborate using Live Share for C++
       href: ../ide/live-share-cpp.md
+    - name: Find and fix common code problems
+      items:
+      - name: Find and fix common code problems
+        displayName: C++ Linter Overview
+        expanded: false
+        href: ../ide/cpp-linter-overview.md
+      - name: lnt-accidental-copy
+        href: ../ide/lnt-accidental-copy.md
+      - name: lnt-arithmetic-overflow
+        href: ../ide/lnt-arithmetic-overflow.md
+      - name: lnt-assignment-equality
+        href: ../ide/lnt-assignment-equality.md
+      - name: lnt-integer-float-division
+        href: ../ide/lnt-integer-float-division.md
+      - name: lnt-logical-bitwise-mismatch
+        href: ../ide/lnt-logical-bitwise-mismatch.md
+      - name: lnt-uninitialized-local
+        href: ../ide/lnt-uninitialized-local.md
     - name: Change signature
       href: ../ide/refactoring/change-signature.md
     - name: Convert to raw string literal
