--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -152,6 +152,8 @@
           href: ambiguous-local-time.md
         - name: choose enum
           href: choose-enum.md
+        - name: clock_time_conversion struct
+          href: clock-time-conversion-struct.md
         - name: common_type struct
           href: common-type-structure.md
         - name: day class
@@ -178,7 +180,7 @@
           href: leap-second-info-struct.md
         - name: local_info struct
           href: local-info-struct.md
-        - name: local_t
+        - name: local_t struct
           href: local_t.md
         - name: month class
           href: month-class.md
@@ -208,6 +210,10 @@
           href: time-zone-link-class.md
         - name: treat_as_floating_point struct
           href: treat-as-floating-point-structure.md
+        - name: tzdb struct
+          href: tzdb-struct.md
+        - name: tzcb_list class
+          href: tzdb-list-class.md
         - name: utc_clock class
           href: utc-clock-class.md
         - name: weekday class
@@ -230,6 +236,8 @@
           href: year-month-weekday-last-class.md
         - name: zoned_time class
           href: zoned-time-class.md
+        - name: zoned_traits struct
+          href: zoned-traits-struct.md
     - name: <cinttypes>
       href: cinttypes.md
     - name: <ciso646>
