Fix TOC schema before VS2022 changes

--- a/docs/atl/toc.yml
+++ b/docs/atl/toc.yml
@@ -1,3 +1,4 @@
+items: 
 - name: Active Template Library (ATL)
   href: atl-com-desktop-components.md
 - name: Active Template Library (ATL) concepts
