--- a/docs/c-runtime-library/toc.yml
+++ b/docs/c-runtime-library/toc.yml
@@ -1,3 +1,4 @@
+items: 
 - name: C runtime library (CRT) reference
   href: ../c-runtime-library/c-run-time-library-reference.md
 - name: CRT library features
