--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -1,3 +1,4 @@
+items: 
 - name: C/C++ Compiler and build tools errors and warnings
   href: compiler-errors-1/c-cpp-build-errors.md
 - name: BSCMAKE errors and warnings
