--- a/docs/linux/toc.yml
+++ b/docs/linux/toc.yml
@@ -1,3 +1,4 @@
+items: 
 - name: Linux with Visual Studio C++ documentation
   href: ../linux/index.yml
 - name: Download, install, and set up the Linux Development workload
