--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -1,3 +1,4 @@
+items: 
 - name: C++ Standard Library reference
   href: cpp-standard-library-reference.md
 - name: C++ Standard Library header files
