--- a/docs/windows/toc.yml
+++ b/docs/windows/toc.yml
@@ -1,3 +1,4 @@
+items: 
 - name: Overview of Windows programming in C++
   href: ../windows/overview-of-windows-programming-in-cpp.md
 - name: Desktop Applications in C++
