--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -213,7 +213,7 @@ items:
           href: treat-as-floating-point-structure.md
         - name: tzdb struct
           href: tzdb-struct.md
-        - name: tzcb_list class
+        - name: tzdb_list class
           href: tzdb-list-class.md
         - name: utc_clock class
           href: utc-clock-class.md
