--- a/docs/overview/toc.yml
+++ b/docs/overview/toc.yml
@@ -6,14 +6,18 @@ items:
       href: ../overview/visual-cpp-in-visual-studio.md
     - name: Overview of C++ development in Visual Studio
       href: ../overview/overview-of-cpp-development.md
-    - name: What's new for C++ in Visual Studio 2019
+    - name: What's new for C++ in Visual Studio 2022 Preview
       href: ../overview/what-s-new-for-visual-cpp-in-visual-studio.md
+    - name: What's new for C++ in Visual Studio 2019
+      href: ../overview/what-s-new-for-cpp-2019.md
     - name: What's new for C++ in Visual Studio 2017
       href: ../overview/what-s-new-for-cpp-2017.md
     - name: What's new for Microsoft C++ docs 
       href: ../overview/whats-new-cpp-docs.md
-    - name: C++ conformance improvements in Visual Studio 2019
+    - name: C++ conformance improvements in Visual Studio 2022 Preview
       href: ../overview/cpp-conformance-improvements.md
+    - name: C++ conformance improvements in Visual Studio 2019
+      href: ../overview/cpp-conformance-improvements-2019.md
     - name: C++ conformance improvements in Visual Studio 2017
       href: ../overview/cpp-conformance-improvements-2017.md
     - name: Microsoft C/C++ language conformance
