Docs/corob/cpp docs 3481 d8049 (#3865)
* Add D8049 error message

* Acrolinx tweak

* Update toc.yml

fix apparent typo in TOC

Co-authored-by: Jeff Borsecnik <36546697+jborsecnik@users.noreply.github.com>

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -61,6 +61,8 @@ items:
       href: tool-errors/command-line-error-d8045.md
     - name: Command-line error D8048
       href: tool-errors/command-line-error-d8048.md
+    - name: Command-line error D8049
+      href: tool-errors/command-line-error-d8049.md
     - name: Command-line warning D9024
       href: tool-errors/command-line-warning-d9024.md
     - name: Command-line warning D9025
