--- a/docs/intrinsics/toc.yml
+++ b/docs/intrinsics/toc.yml
@@ -57,6 +57,12 @@ items:
           href: ../intrinsics/fastfail.md
         - name: __faststorefence
           href: ../intrinsics/faststorefence.md
+        - name: Floating-point fast conversion functions
+          href: ../intrinsics/fast-conversion-functions.md
+        - name: Floating-point saturation conversion functions
+          href: ../intrinsics/saturation-conversion-functions.md
+        - name: Floating-point sentinel conversion functions
+          href: ../intrinsics/sentinel-conversion-functions.md
         - name: __getcallerseflags
           href: ../intrinsics/getcallerseflags.md
         - name: __halt
