--- a/docs/ide/toc.yml
+++ b/docs/ide/toc.yml
@@ -24,6 +24,8 @@ items:
         href: ../ide/lnt-arithmetic-overflow.md
       - name: lnt-assignment-equality
         href: ../ide/lnt-assignment-equality.md
+      - name: lnt-comparison-bitwise-precedence.md
+        href: ../ide/lnt-assignment-equality.md
       - name: lnt-integer-float-division
         href: ../ide/lnt-integer-float-division.md
       - name: lnt-logical-bitwise-mismatch
