Add C5054, C5055, C5056 to TOC

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -4297,6 +4297,12 @@ items:
           href: compiler-warnings/c5046.md
         - name: Compiler warning C5050
           href: compiler-warnings/c5050.md
+        - name: Compiler warning (level 4) C5054
+          href: compiler-warnings/c5054.md
+        - name: Compiler warning (level 1) C5055
+          href: compiler-warnings/c5055.md
+        - name: Compiler warning (level 1) C5056
+          href: compiler-warnings/c5056.md
         - name: Compiler warning (level 1) C5105
           href: compiler-warnings/c5105.md
         - name: Compiler warning (level 1) C5208
