restored link to videos previously on channel 9 but now on docs.micro… (#4159)
* restored link to videos previously on channel 9 but now on docs.microsoft.com shows page

* acrolinx

* make link relative

Co-authored-by: TylerMSFT <Tyler.Whitney@microsoft.com>

--- a/docs/cpp/index.yml
+++ b/docs/cpp/index.yml
@@ -33,6 +33,10 @@ landingContent:
             url: ../build/vscpp-step-1-create.md
           - text: Create a console calculator in C++
             url: ../get-started/tutorial-console-cpp.md
+      - linkListType: video
+        links:
+          - text: "Learn C++ - A general purpose language and library"
+            url: https://docs.microsoft.com/shows/cplusplus-language-library
       - linkListType: learn
         links:
           - text: Welcome back to C++ - Modern C++
