--- a/docs/mfc/toc.yml
+++ b/docs/mfc/toc.yml
@@ -2918,3 +2918,5 @@ items:
           href: reference/details-of-atl-support-added-by-the-atl-wizard.md
     - name: MFC class wizard
       href: reference/mfc-class-wizard.md
+    - name: Adding an IDL MFC method
+      href: refernce/add-idl-mfc-method-wizard.md
